--- a/Notes.Rmd
+++ b/Notes.Rmd
@@ -82,4 +82,18 @@ output:
 [4,]  147  142  137  132  127
 [5,]  146  141  136  131  126`  
 
-### Overwriting
+### Overwriting  
+
+- `m[7, 1] <- 564`  
+  + changes element at (7,1) to 564  
+- `m[, 8] <- 2`  
+  + changes column 8 to all '2' in the elements  
+- `m[2:5, 4:8] <- c(20, 19, 18, 17)`  
+  + changes the elements in columns 4:8 to change to numbers 20, 19, 18, 17 for rows 2:5  
+- `m[2:5, 4:8] <- 1`  
+  + changes the elements in columns 4:8 to change to number 1 for rows 2:5  
+- `m[2:5, 4:8] <- matrix(data = c(20:1), nrow = 4, ncol = 5, byrow = TRUE)`  
+  + ?  
+- `m[, 8] <- c("a", "b")`  
+  + ?  
+-
